postgresql-common (77) UNRELEASED; urgency=low

  * debian/control: Fix obsolete ${Source-Version}.

 -- Martin Pitt <mpitt@debian.org>  Sat, 04 Aug 2007 11:31:04 +0200

postgresql-common (76) unstable; urgency=medium

  * Priority medium since this unbreaks client programs like psql in testing.
  * pg_wrapper: Revert changes of version 74 to make this work with taint
    mode. It breaks too many custom setups, and Perl just doesn't allow to
    untaint $PATH bluntly. If you run pg_wrapper from a perl script with taint
    checks enabled, you have to clean $PATH yourself. Closes: #427894
  * t/020_create_sql_remove.t: Check that PL/TCL and PL/TCLu work, so that we
    now have complete test coverage of all four PLs that are shipped with the
    core package.
  * t/001_packages.t: Check that postgresql-pltcl-<version> is installed.
  * PgCommon.pm, get_cluster_socketdir(): Improve error message if data
    directory parent is not readable. Closes: #428698

 -- Martin Pitt <mpitt@debian.org>  Sat, 23 Jun 2007 21:52:58 +0200

postgresql-common (75) unstable; urgency=low

  The "Never run the test suite without 7.4 just because it is deprecated and
  about to be removed" release. Sorry for the trouble.

  * pg_ctlcluster: Partially revert PATH cleansing to make pg_ctl work on 7.4
    again. This can be dropped again once 7.4 is actually removed from the
    archive. Closes: #425594

 -- Martin Pitt <mpitt@debian.org>  Thu, 24 May 2007 09:26:45 +0200

postgresql-common (74) unstable; urgency=low

  * debian/supported_versions:
    - Match any 4.0* as Debian Etch to get the correct set of supported
      versions. Closes: #420915
    - Add Lenny/unstable: only support 8.2.
    - Add Ubuntu 7.10.
    - Don't fail if the distribution cannot be determined at all, only print
      out a warning.
  * pg_createcluster, pg_ctlcluster, pg_dropcluster, pg_maintenance,
    pg_upgradecluster: Strip down PATH untainting to the absolute minimum, to