@@ -1,8 +1,11 @@
 postgresql-common (77) UNRELEASED; urgency=low
 
   * debian/control: Fix obsolete ${Source-Version}.
+  * t/020_create_sql_remove.t: Create fake rotated log files to check that
+    they are cleaned up properly.
+  * pg_dropcluster: Remove rotated logs, too. (part of #431643)
 
- -- Martin Pitt <mpitt@debian.org>  Sat, 04 Aug 2007 11:31:04 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sat, 04 Aug 2007 12:00:00 +0200
 
 postgresql-common (76) unstable; urgency=medium
 
